src/test/ui/parser/bad-pointer-type.stderr
error: expected mut or const in raw pointer type
  --> $DIR/bad-pointer-type.rs:1:11
   |
LL | fn foo(_: *()) {
   |           ^ expected mut or const in raw pointer type
   |
   = help: use `*mut T` or `*const T` as appropriate

error: aborting due to previous error

