src/test/ui/parser/bad-pointer-type.rs
fn foo(_: *()) {
    //~^ ERROR expected mut or const in raw pointer type
}

fn main() {}
